1.add drawer 2.add account authenticator

--- a/app/src/main/res/menu/drawer_items.xml
+++ b/app/src/main/res/menu/drawer_items.xml
@@ -8,5 +8,15 @@
             android:checkable="true"
             android:title=""
             android:visible="false" />
+        <item
+            android:id="@+id/explore_nav_item"
+            android:checkable="true"
+            android:title=""
+            android:visible="false" />
+        <item
+            android:id="@+id/debug_nav_item"
+            android:checkable="true"
+            android:title=""
+            android:visible="false" />
     </group>
 </menu>
