--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,9 @@
     <color name="io16_accent_yellow">#ffffc927</color>
     <color name="io16_accent_purple">#ff7885ca</color>
     <color name="dark_icon">#99000000</color>
+    <color name="large_dark_icon">#66000000</color>
+    <color name="cyan_a700_plus">#ff006574</color>
+    <color name="navview_icon">#ff444444</color>
 
     <color name="app_primary_accent">#FF26C6DA</color>
     <color name="app_secondary_accent">#1A000000</color>
@@ -22,9 +25,15 @@
     <color name="app_io_logo_tint">#FF26C6DA</color>
     <color name="divider">#1f000000</color>
 
+    <color name="light_content_scrim">#0d000000</color>
+
     <color name="theme_primary">@color/app_primary_accent</color>
     <color name="theme_primary_dark">#00BCD4</color>
     <color name="theme_primary_light">#7986cb</color>
+
+    <color name="theme_accent_1">#00b0ff</color>
+    <color name="theme_accent_1_light">#8ad4fa</color>
+    <color name="theme_accent_2">#e91e63</color>
 
     <color name="app_body_text_1">#de000000</color>
     <color name="app_body_text_2">#8a000000</color>
@@ -36,4 +45,14 @@
     <color name="body_text_2">#8a000000</color>
     <color name="body_text_3">#60000000</color>
     <color name="body_text_disabled">#44000000</color>
+
+    <color name="body_text_1_inverse">#deffffff</color>
+    <color name="body_text_2_inverse">#8affffff</color>
+
+    <color name="navdrawer_background">#ffffffff</color>
+    <color name="navdrawer_text_color">@color/body_text_1</color>
+    <color name="navdrawer_text_color_selected">@color/cyan_a700_plus</color>
+    <color name="navdrawer_icon_tint">#444</color>
+    <color name="navdrawer_icon_tint_selected">@color/cyan_a700_plus</color>
+    <color name="navdrawer_selected_item_background">#1a000000</color>
 </resources>
