--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,11 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="navdrawer_profile_image_size">40dp</dimen>
+    <dimen name="navdrawer_item_icon_size">24dp</dimen>
+    <dimen name="navdrawer_logo_vertical_padding">16dp</dimen>
+    <dimen name="navdrawer_logo_padding_right">16dp</dimen>
+
     <item name="match_parent" format="integer" type="dimen">-1</item>
 
     <dimen name="welcome_logo_spacing">48dp</dimen>
@@ -25,4 +30,14 @@
     <dimen name="welcome_button_bar_elevation">6dp</dimen>
     <dimen name="welcome_title_size">20sp</dimen>
     <dimen name="welcome_logo_top_spacing">48dp</dimen>
+
+    <dimen name="text_size_xsmall">11sp</dimen>
+    <dimen name="text_size_small">12sp</dimen>
+    <dimen name="text_size_body">13sp</dimen>
+    <dimen name="text_size_medium">14sp</dimen>
+    <dimen name="text_size_large">18sp</dimen>
+    <dimen name="text_size_xlarge">20sp</dimen>
+    <dimen name="text_size_diff_large_small">6sp</dimen>
+
+    <dimen name="action_button_padding">10dp</dimen>
 </resources>
