--- a/app/src/main/res/layout/account_spinner.xml
+++ b/app/src/main/res/layout/account_spinner.xml
@@ -12,7 +12,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/body_text_1_inverse"
-        android:textSize="@dimen/text_size_large" />
+        android:textSize="@dimen/app_text_size_large" />
 
     <TextView
         android:id="@+id/profile_email_text"
@@ -22,6 +22,6 @@
         android:maxLines="1"
         android:paddingBottom="@dimen/navview_header_bottom_padding"
         android:textColor="@color/body_text_2_inverse"
-        android:textSize="@dimen/text_size_medium" />
+        android:textSize="@dimen/app_text_size_medium" />
 
 </LinearLayout>
