--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,12 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="spacing_micro">4dp</dimen>
     <dimen name="spacing_normal">8dp</dimen>
     <dimen name="padding_normal">16dp</dimen>
+    <dimen name="spacing_large">32dp</dimen>
+    <dimen name="touch_raise">6dp</dimen>
 
+    <dimen name="stream_card_corner_radius">0dp</dimen>
     <dimen name="card_corner_radius">2dp</dimen>
     <dimen name="card_elevation">2dp</dimen>
 
@@ -31,13 +35,36 @@
     <dimen name="welcome_title_size">20sp</dimen>
     <dimen name="welcome_logo_top_spacing">48dp</dimen>
 
-    <dimen name="text_size_xsmall">11sp</dimen>
-    <dimen name="text_size_small">12sp</dimen>
-    <dimen name="text_size_body">13sp</dimen>
-    <dimen name="text_size_medium">14sp</dimen>
-    <dimen name="text_size_large">18sp</dimen>
-    <dimen name="text_size_xlarge">20sp</dimen>
-    <dimen name="text_size_diff_large_small">6sp</dimen>
+    <dimen name="explore_io_message_card_image_width">56dp</dimen>
+    <dimen name="explore_io_message_card_min_button_width">48dp</dimen>
+    <dimen name="explore_io_keynote_card_padding_top">16dp</dimen>
+    <dimen name="explore_io_keynote_card_padding_bottom">16dp</dimen>
+    <dimen name="explore_io_keynote_card_padding_start">16dp</dimen>
+    <dimen name="explore_io_keynote_card_padding_end">16dp</dimen>
+    <dimen name="explore_io_keynote_card_desc_padding">4dp</dimen>
+    <dimen name="explore_io_theme_cards_session_info_max_height">84dp</dimen>
+    <dimen name="explore_io_theme_cards_session_image_width">112dp</dimen>
+    <dimen name="explore_io_theme_illo_height">48dp</dimen>
+
+    <item name="aspect_16_9" format="float" type="dimen">1.7778</item>
+    <item name="aspect_4_3" format="float" type="dimen">1.3333</item>
+    <item name="aspect_phi" format="float" type="dimen">1.618</item>
+
+    <dimen name="app_text_size_xsmall">11sp</dimen>
+    <dimen name="app_text_size_small">12sp</dimen>
+    <dimen name="app_text_size_body">13sp</dimen>
+    <dimen name="app_text_size_medium">14sp</dimen>
+    <dimen name="app_text_size_large">18sp</dimen>
+    <dimen name="app_text_size_xlarge">20sp</dimen>
+    <dimen name="app_text_size_diff_large_small">6sp</dimen>
+
+    <item name="body_1_spacing" format="float" type="dimen">1.22448979592</item>
+    <item name="h3_spacing" format="float" type="dimen">1.14285714286</item>
+
+    <dimen name="horizontal_scrollbar_height">4dp</dimen>
 
     <dimen name="action_button_padding">10dp</dimen>
+
+    <dimen name="explore_topic_card_header_height">112dp</dimen>
+    <dimen name="compact_list_tile">168dp</dimen>
 </resources>
