--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,6 +51,13 @@
         <item name="android:windowBackground">@color/background</item>
     </style>
 
+    <style name="ActionBarThemeOverlay" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="android:textColorPrimary">@color/text_on_primary</item>
+        <item name="android:textColorSecondary">@color/subtitle_on_primary</item>
+    </style>
+
+    <style name="ActionBarPopupThemeOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
     <style name="Theme.GoogleIO.Welcome" parent="Theme.GoogleIO.Welcome.Base" />
 
     <style name="Theme.GoogleIO.SessionDetails.SizeBase" parent="Theme.GoogleIO">
@@ -141,5 +148,10 @@
         <item name="android:textSize">@dimen/app_text_size_small</item>
         <item name="android:background">@drawable/more_button_background</item>
         <item name="android:letterSpacing">0.1</item>
+    </style>
+
+    <style name="HeaderBar">
+        <item name="android:background">?colorPrimary</item>
+        <item name="android:elevation">@dimen/headerbar_elevation</item>
     </style>
 </resources>
