--- a/app/src/main/res/menu/drawer_items.xml
+++ b/app/src/main/res/menu/drawer_items.xml
@@ -9,6 +9,11 @@
             android:title=""
             android:visible="false" />
         <item
+            android:id="@+id/myschedule_nav_item"
+            android:checkable="true"
+            android:title=""
+            android:visible="false" />
+        <item
             android:id="@+id/explore_nav_item"
             android:checkable="true"
             android:title=""
