--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -145,6 +145,10 @@
         <item name="android:layout">@layout/google_io_preference</item>
     </style>
 
+    <style name="MyScheduleTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textColor">@color/unselected_tab_on_primary</item>
+    </style>
+
     <style name="MoreButton">
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Button</item>
         <item name="android:textSize">@dimen/app_text_size_small</item>
