--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -75,6 +75,7 @@
     <color name="tab_background">@color/theme_primary</color>
     <color name="tab_selected_strip">@android:color/white</color>
     <color name="unselected_tab_on_primary">#b3004446</color>
+    <color name="list_dropdown_divider_color">#92a3a3a3</color>
 
     <color name="my_schedule_conflict">#dd2c00</color>
     <color name="my_schedule_past_background">@color/grey_background</color>
