--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,6 +58,12 @@
         <item name="android:textColorSecondary">@color/subtitle_on_primary</item>
     </style>
 
+    <style name="SearchViewTheme" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="android:textColorPrimary">@color/app_body_text_1</item>
+        <item name="colorControlNormal">@color/app_body_text_2</item>
+        <item name="colorControlActivated">@color/theme_accent_1</item>
+    </style>
+
     <style name="ActionBarPopupThemeOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="Theme.GoogleIO.Welcome" parent="Theme.GoogleIO.Welcome.Base" />
@@ -73,6 +79,28 @@
     <style name="Theme.GoogleIO.Light" parent="Theme.GoogleIO.WithNavDrawer" />
 
     <style name="Theme.GoogleIO.ExploreSessions" parent="Theme.GoogleIO.Light" />
+
+    <style name="Theme.GoogleIO.Search" parent="Theme.GoogleIO.Light">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="autoCompleteTextViewStyle">@style/Widget.GoogleIO.Search.AutoCompleteTextView
+        </item>
+        <item name="searchViewStyle">@style/Widget.GoogleIO.SearchView</item>
+        <item name="colorControlNormal">@color/app_body_text_2</item>
+        <item name="colorControlActivated">@color/theme_accent_1</item>
+    </style>
+
+    <style name="Widget.GoogleIO.SearchView" parent="Widget.AppCompat.SearchView">
+        <item name="searchHintIcon">@null</item>
+        <item name="queryBackground">@null</item>
+        <item name="submitBackground">@null</item>
+    </style>
+
+    <style name="Widget.GoogleIO.Search.AutoCompleteTextView" parent="Widget.AppCompat.Light.AutoCompleteTextView">
+        <item name="android:textColorHint">@color/app_body_text_2</item>
+        <!-- If set to @null the cursor will be displayed using android:textColor -->
+        <item name="android:textCursorDrawable">@null</item>
+    </style>
 
     <style name="Theme.GoogleIO.Transparent" parent="Theme.GoogleIO.Light">
         <item name="android:windowIsTranslucent">true</item>
