--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,8 @@
     <dimen name="keyline_2_minus_16dp">56dp</dimen>
     <dimen name="keyline_2_session_detail">@dimen/keyline_2</dimen>
 
+    <dimen name="divider_height">1dp</dimen>
+
     <dimen name="headerbar_elevation">4dp</dimen>
 
     <dimen name="activity_horizontal_margin">16dp</dimen>
